=======
CHANGES
=======

0.8.1 (unreleased)
------------------

- Nodes and skill sets can now be deprecated.
- Update permissions: clerks and site managers can access the skills


0.8.0 (2013-08-01)
------------------

- Background PDF reports
- Moved in Per Student Skills Report and Skills Completion Report from schooltool.virginia
- Added Student skill completion (by section) pdf archive report.


0.7.1 (2013-05-29)
------------------

- Renamed Section Competencies reports to Student Skill Reports
- Fixed Add Skill exception when z3c.form >= 2.9 is used (https://launchpad.net/bugs/1185433)


0.7.0 (2013-04-18)
------------------

- Fixed column title in SkillSets worksheet in sample data xls (https://launchpad.net/bugs/1126624)
- Added Label column to SkillSets worksheet in the exporter
- Changed required widget terms to Required and Optional (https://launchpad.net/bugs/1123471)
- Made label and descriptions fields uniform for nodes, skill sets and skills (https://launchpad.net/bugs/1103708)
- Added "Submit and add" action to "New skill set" form (https://launchpad.net/bugs/1103710)
- Changed Skills selector to Skill Sets in the gradebook (https://launchpad.net/bugs/1154425)
- Fixed worksheet order in Skills Export xls (https://launchpad.net/bugs/1126612)
- Updated translations


0.6.2 (2013-03-25)
------------------

- Added section student competency report
- Fixed skills sorting in Set Required/Visible view
- Fixed permissions of project view


0.6.1 (2013-03-20)
------------------

- Fixed permissions of popup menus and competency report
- Updated translations, added Thai


0.6 (2013-02-25)
----------------

- Fix section skills with no equivalent course skill
- Sorted by label and title in add skill view for projects
- Moved "Skills Export" option from School to Documents view (https://launchpad.net/bugs/1126577)
- Moved "Import Skill Data" option from School to Documents view (https://launchpad.net/bugs/1131436)